--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <th>Saturday</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
+        <tbody class="calendar-body">
+          <!--<tr>
             <td>
               <span class="table-day">1</span>
               <p><a href="#">Appointment blah blah</a></p>
@@ -40,6 +40,10 @@
               <p><a href="#">Appointment lalala lala lalala lalala </a></p>
             </td>
             <td>
+              <span class="table-day">4</span>
+              <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
+            </td>
+            <td>
               <span class="table-day">5</span>
               <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
             </td>
@@ -51,111 +55,8 @@
               <span class="table-day">7</span>
               <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
             </td>
-            <td>
-              <span class="table-day">8</span>
-              <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
           </tr>
-          <tr>
-            <td>
-              <span class="table-day">9</span>
-              <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-            <td>
-                <span class="table-day">10</span>
-                <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-            <td>
-                <span class="table-day">11</span>
-                <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-            <td>
-              <span class="table-day">12</span>
-              <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-            <td>
-              <span class="table-day">13</span>
-              <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-            <td>
-              <span class="table-day">14</span>
-              <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-            <td>
-              <span class="table-day">15</span>
-              <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <span class="table-day">16</span>
-              <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-            <td>
-                <span class="table-day">17</span>
-                <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-            <td>
-                <span class="table-day">18</span>
-                <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-            <td>
-              <span class="table-day">19</span>
-              <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-            <td>
-              <span class="table-day">20</span>
-              <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-            <td>
-              <span class="table-day">21</span>
-              <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-            <td>
-              <span class="table-day">22</span>
-              <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <span class="table-day">23</span>
-              <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-            <td>
-                <span class="table-day">24</span>
-                <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-            <td>
-                <span class="table-day">25</span>
-                <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-            <td>
-              <span class="table-day">26</span>
-              <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-            <td>
-              <span class="table-day">27</span>
-              <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-            <td>
-              <span class="table-day">28</span>
-              <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-            <td>
-              <span class="table-day">29</span>
-              <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-            </td>
-          </tr>
-          <tr>
-              <td>
-                <span class="table-day">30</span>
-                <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-              </td>
-              <td>
-                <span class="table-day">31</span>
-                <a href="#" class="btn add"><span class="fas fa-plus"></span></a>
-              </td>
-            </tr>
+          -->
         </tbody>
       </table>
     </main>
@@ -177,15 +78,15 @@
       </div>
     </div>
     <div class="modal-wrapper del-modal">
-        <div class="modal">
+      <div class="modal">
           <header><h2>Delete</h2><span class="times">&times;</span></header>
-          <div class="modal-body">
-            <p>Do you want to delete this appointment?</p>
-            <input type="submit" class="btn del" value="Yes">
-            <input type="button" class="btn edit" value="No">
-          </div>
+        <div class="modal-body">
+          <p>Do you want to delete this appointment?</p>
+          <input type="submit" class="btn del" value="Yes">
+          <input type="button" class="btn edit" value="No">
         </div>
       </div>
+    </div>
 		<script src="js/calendar.js"></script>
 	</body>
 </html>
