--- a/index.html
+++ b/index.html
@@ -59,6 +59,21 @@
         </div>
       </div>
     </div>
+    <div class="modal-wrapper edit-modal">
+      <div class="modal">
+        <header class="modal-header"><h2>Edit</h2><span class="times">&times;</span></header>
+        <div class="modal-body">
+            <div class="inputs">
+              <input type="text" class="inputs-title-edit" placeholder="Title" maxlength="40">
+            </div>
+            <div class="inputs">
+              <textarea class="inputs-desc-edit" rows="4" placeholder="Description"></textarea>
+            </div>
+            <input type="submit" class="btn add modal-update" value="Edit">
+            <input type="button" class="btn cancel" value="Cancel">
+        </div>
+      </div>
+    </div>
     <div class="modal-wrapper del-modal">
       <div class="modal">
         <header class="modal-header"><h2>Delete</h2><span class="times">&times;</span></header>
